# deep-agent

./: .gitignore  CLAUDE.md  start_deep_agent.bat  state.json
.ai/commands/: prompt-optimizer.md
.ai/commands_zh/: prompt-optimizer.md  speckit.analyze.md  speckit.epic.md  (+8 more)
.docs/: llms.txt  sources.yaml
deep-agents-backend/: README.md  env.example  langgraph.json  pyproject.toml
deep-agents-backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
deep-agents-backend/scripts/: start_dev.py  test_connection.py
deep-agents-backend/src/: __init__.py
deep-agents-backend/src/agent/: __init__.py  deep_agent.py  prompts.py
deep-agents-backend/src/config/: __init__.py  settings.py
deep-agents-backend/src/subagents/: __init__.py  code.py  research.py
deep-agents-backend/src/tools/: __init__.py  search.py
deep-agents-backend/tests/: __init__.py  conftest.py  test_agent.py
deep-agents-backend/workspace/: README.md  code_analysis_test.py  deep_code_analysis.py  example_usage.py  run_all_tests.py  test.txt  test_cloner.py  website_cloner.py  website_cloner_fixed.py
deep-agents-langchain/: README.md  env.example  pyproject.toml  requirements.txt
deep-agents-langchain/src/deep_agents_langchain/: __init__.py  agent.py  config.py  main.py  prompts.py  server.py  state.py
deep-agents-langchain/src/deep_agents_langchain/agent/: __init__.py  builder.py  prompts.py
deep-agents-langchain/src/deep_agents_langchain/api/: __init__.py  routes.py
deep-agents-langchain/src/deep_agents_langchain/config/: __init__.py  settings.py
deep-agents-langchain/src/deep_agents_langchain/service/: __init__.py  runs.py  threads.py
deep-agents-langchain/src/deep_agents_langchain/storage/: __init__.py  db.py  models.py  repositories.py
deep-agents-langchain/src/deep_agents_langchain/tools/: __init__.py  filesystem.py  search.py  todos.py
deep-agents-langchain/src/deep_agents_langchain/utils/: __init__.py  sse.py
deep-agents-langchain/tests/: test_agent.py  test_smoke.py
deep-agents-ui/: README.md  eslint.config.js  package.json
docs/: global-business-overview.md  todo.md
requirements/: context.md  tool-edit-file.md  tool-internet-search.md  tool-ls.md  tool-read-file.md  tool-todo.md  tool-write-file.md
(+1116 files in other folders)
