[project]
name = "deep-agents-langchain"
version = "0.1.0"
description = "LangChain 1.x backend for DeepAgent-compatible APIs (single-agent)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yuand" }]
license = { text = "MIT" }

dependencies = [
    "langchain>=0.1.0,<0.2.0",
    "langchain-core>=0.1.0,<0.2.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.23.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_agents_langchain"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml", "env.example"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

